--- a/Benchmarks/Water Chemistry/TSS v2/TSS Ref Benchmarks V2.Rmd
+++ b/Benchmarks/Water Chemistry/TSS v2/TSS Ref Benchmarks V2.Rmd
@@ -9,6 +9,8 @@ output: html_document
 
 V2 = cleaned up code from the class version.  SYB note 1/6/26 - I verified that this script produces the same output that the class script did, but in order to get the same model run, you have to re-order the input data table for random forest so the rows and columns are in the same order as the class script version (I haven't saved that re-ordering here as the order in the original script is somewhat arbitrary. Instead I have ordered rows and columns alphabetically and by type).
 
+1/23/26 Updated model with new and improved variable selection process and updated data file with outliers removed.
+
 # **1 - LOAD PACKAGES**
 
 ```{r warning=FALSE}
@@ -21,6 +23,7 @@ library(vip)
 library(caret)
 library(ORDEQBioassessment)
 library(EnvStats)
+library(Metrics)
 # devtools::install_github("TravisPritchardODEQ/ORDEQBioassessment", 
 #                         host = "https://api.github.com", 
 #                        dependencies = TRUE, force = TRUE, upgrade = "never")
@@ -28,13 +31,13 @@ library(EnvStats)
 
 # **2 - IMPORT DATA**
 
-## STATIONS/TSS - *FROM WATER CHEMISTRY BENCHMARKS SCRIPT*
+## STATIONS - *FROM WATER CHEMISTRY BENCHMARKS SCRIPT*
 
 ```{r}
 tss <- read_excel("~/BioMonORDEQ/Benchmarks/Water Chemistry/TSS v2/TSS_no_outliers2026-01-21.xlsx") #output file from ref benchmarks script - Ambient sites included
 
 comids <- tss %>% 
-  select(COMID) 
+  select(COMID) # Get just the COMIDs for the next step
 ```
 
 ## WATERSHED PREDICTOR VARIABLES - *FROM EPA STREAMCAT*
@@ -198,7 +201,7 @@ sc_all <- sc_all %>% reduce(full_join, by = 'COMID')
 rm(list=c('ag', 'clim', 'dams', 'flow','iwi', 'cover', 'litho', 'mintox', 'roads', 'urb', 'fire', 'other'))
 ```
 
-#### Add predictor variables not in StreamCat (LII and III Ecoregion, Lat/Long, erodible vs. resistant geology, slope, stream power)
+#### Add predictor variables not in StreamCat (LII and III Ecoregion, Lat/Long, erodible vs. resistant geology, slope, stream power) and transform data.
 
 ```{r}
 # ERODIBLE VS RESISTENT GEOLOGY (KEPT ERODIBLE, SINCE RESISTENT IS INVERSE OF ERODIBLE)
@@ -219,7 +222,7 @@ tss_vars <- sc_all %>%
   inner_join(erod_resist_strmpow, by='COMID') %>% 
   inner_join(tss, by = 'COMID')
 
-# RE-ORDER COLUMNS 
+# RE-ORDER COLUMNS and TRANSFORM DATA
 tss_vars <- tss_vars %>% 
   relocate(MLocID:TSS, .before = 'COMID') %>% 
   mutate(logTSS = log(TSS+1)) %>%  # Log transform TSS column
@@ -230,12 +233,22 @@ tss_vars <- tss_vars %>%
 
 #### Explore co-varied metrics and select which we want to retain for modeling purposes.
 
-#### Make Spearman correlation matrix to identify co-varied parameters
+#### Make Spearman correlation matrix to identify co-varied parameters.
 
 ```{r, warning=FALSE}
+# FIND OUT WHICH COLUMNS HAVE NAs (AND WRITE CODE FOR THEM BELOW)
+sapply(tss_vars, function(x) sum(is.na(x)))
+
+# PERFORM NA ROUGHFIX FUNCTION ON METRICS WITH just a few missing values (wait to see about the ones that are missing a lot: MAST2008, BANKFULLDEPTH, BANKFULLWIDTH, THALWEGDEPTH, WETTEDWIDTH, PRG_BMMI0809)
+tss_vars$NANIWS <- na.roughfix(tss_vars$NANIWS) # 1 NA
+tss_vars$NSURPWS <- na.roughfix(tss_vars$NSURPWS) # 1 NA
+tss_vars$PCTIMPSLPHIGH2001WS <- na.roughfix(tss_vars$PCTIMPSLPHIGH2001WS) # 4 NAs
+tss_vars$MWST2008 <- na.roughfix(tss_vars$ MWST2008) # 8 NAs
+tss_vars$SW_FLUXWS <- na.roughfix(tss_vars$ SW_FLUXWS) # 2 NAs
+
 # Subset numeric variables only
 tss_vars_num <- tss_vars %>% 
-  select(!c(PCT_EROD:L3Eco)) %>% 
+  select(!c(SITE_TYPE:L3Eco)) %>% 
   select(!c(MLocID:logTSS)) 
 
 # FULL CORRELATION MATRIX
@@ -249,34 +262,49 @@ matrix <- spear.rows %>%
   filter(abs(cor) > 0.8)
 
 #export once, then clean up in Excel
-write_xlsx(matrix, path = "~/BioMonORDEQ/Benchmarks/Water Chemistry/TSS v2/Spearmans2_no_outliers.xlsx")
+#write_xlsx(matrix, path = "~/BioMonORDEQ/Benchmarks/Water Chemistry/TSS v2/Spearmans2_no_outliers.xlsx")
 
 rm(list=c('spear', 'spear.rows'))
 ```
 
-##### NOTE: SB, SH, AT did this together in Excel. See "Spearman2 - predictor decisions" on Teams for list of discarded/retained metrics.
+##### Use CV, % of sites that have zero values, and KD plots for predictors to help make decisions about which correlated vars to keep/drop:
 
 ```{r}
 # Look at Coefficient of Variance for predictors.
 cv <- tss_vars_num %>% 
-  summarise(across(everything(), ~ cv(.x))) %>% 
-  pivot_longer(1:137, names_to="Var", values_to="CV") # Change first argument to 1:# columns
+  summarise(across(everything(), ~ cv(.x, na.rm = TRUE))) %>% 
+  pivot_longer(1:140, names_to="Var", values_to="CV") # Change first argument to 1:# columns
 
 cv_pctzero <- tss_vars_num %>%
-  summarise(across(everything(), ~ sum(. == 0) / n() * 100)) %>% 
-  pivot_longer(1:137, names_to="Var", values_to="Percent Zeros") %>%  # Change  first argument to 1:# columns
+  summarise(across(everything(), ~ sum(. == 0, na.rm = TRUE) / n() * 100)) %>% 
+  pivot_longer(1:140, names_to="Var", values_to="Percent Zeros") %>%  # Change  first argument to 1:# columns
   inner_join(cv, by = "Var")
 
-#write_xlsx(cv_pctzero, path = paste0("C://Users//sberzin//OneDrive - Oregon//Desktop//CofV", Sys.Date(), ".xlsx"))
+#write_xlsx(cv_pctzero, path = "~/BioMonORDEQ/Benchmarks/Water Chemistry/TSS v2/TSS_CofV.xlsx")
 
 rm(cv)
 ```
 
-#### Select variables based on correlation analysis.
+```{r}
+# Look at KD plots for predictors.
+tss_vars %>%
+    select("AGKFFACTWS","AL2O3WS","BANKFULLDEPTH","BANKFULLWIDTH","BFIWS","CAOWS","CBNFWS","CLAYWS","CONNWS","DAMDENSWS","DAMNIDSTORWS","DAMNRMSTORWS") %>%  # EDIT THIS LINE to include vars that you want to look at.
+  keep(is.numeric) %>% 
+  gather() %>% 
+  ggplot(aes(value)) +
+  facet_wrap(~ key, scales = "free") +
+  geom_density() +
+  geom_rug()
+
+# If warnings appear with the plot they pertain to NA values being present, ignore them.
+```
+
+#### Select variables based on correlation analysis. (Either select desired vars or drop undesired ones. Helps if they are in alphabetical order. Don't get rid of columns you want to keep from AWQMS at this stage.)  SH, AT, and SB did this together and recorded decisions in 'TSSv2 Var selection decisions 1-23-26.xlsx'
 
 ```{r}
 tss_vars_selected <- tss_vars %>% 
-  select(c(MLocID:COMID,BANKFULLWIDTH,BFIWS,CANALDENSWS,CLAYWS,COALMINEDENSWS,COMPSTRGTHWS,DAMDENSWS,ELEVWS,FE2O3WS,HYDRLCONDWS,KFFACTWS,MINEDENSWS,MSST2008,NWS,NA2OWS,NPDESDENSWS,OMWS,PCTAGDRAINAGEWS,PCTAGSLPMID2001WS,PCTALKINTRUVOLWS,PCTALLUVCOASTWS,PCTBL2001WS,PCTCARBRESIDWS,PCTCOASTCRSWS,PCTCOLLUVSEDWS,PCTCONIF2001WS,PCTCROP2001WS,PCTEOLCRSWS,PCTEOLFINEWS,PCTEXTRUVOLWS,PCTFIRE2002WS,PCTFRSTLOSS2002WS,PCTGLACLAKECRSWS,PCTGLACLAKEFINEWS,PCTGLACTILCLAYWS,PCTGLACTILCRSWS,PCTGLACTILLOAMWS,PCTGRS2001WS,PCTHBWET2001WS,PCTHYDRICWS,PCTICE2001WS,PCTIMP2001WS,PCTINCVEGRESP2002WS,PCTMXFST2001WS,PCTNONAGINTRODMANAGVEGWS,PCTNONPROCMASK2002WS,PCTOW2001WS,PCTSALLAKEWS,PCTSHRB2001WS,PCTURBHI2001WS,PCTURBMD2001WS,PCTURBOP2001WS,PCTWATERWS,PCTWDWET2001WS,PESTIC1997WS,POPDEN2010WS,PRECIP9120WS,RCKDEPWS,RDCRSWS,RDCRSSLPWTDWS,RDDENSWS,ROCKNWS,SWS,SANDWS,SEPTICWS,SUPERFUNDDENSWS,SW_FLUXWS,TRIDENSWS,WDRW_LDWS,WETINDEXWS,WTDEPWS,WWTPALLDENSWS,WWTPMAJORDENSWS, PCT_EROD:L3Eco)) # 79 vars in total starting with BANKFULLWIDTH
+  select(c(MLocID:COMID,BFIWS, CANALDENSWS, CAOWS, CLAYWS, COMPSTRGTHWS, DAMDENSWS, ELEVWS, FE2O3WS, HYDRLCONDWS, KFFACTWS, MINEDENSWS, MSST2008, NHD_pSLOPE, NPDESDENSWS, NWS, OMWS, PCT_EROD, PCTAGDRAINAGEWS, PCTAGSLPMID2001WS, PCTALKINTRUVOLWS, PCTALLUVCOASTWS, PCTBL2001WS, PCTBURNAREA2002WS, PCTCARBRESIDWS, PCTCOLLUVSEDWS, PCTCONIF2001WS, PCTCROP2001WS, PCTDECID2001WS, PCTEOLFINEWS, PCTEXTRUVOLWS, PCTFRSTLOSS2002WS, PCTGLACLAKECRSWS, PCTGLACLAKEFINEWS, PCTGLACTILCRSWS, PCTGRS2001WS, PCTHBWET2001WS, PCTICE2001WS, PCTIMP2001WS, PCTINCVEGRESP2002WS, PCTNONAGINTRODMANAGVEGWS, PCTOW2001WS, PCTSALLAKEWS, PCTSHRB2001WS, PCTURBHI2001WS, PCTURBLO2001WS, PCTURBOP2001WS, PCTWATERWS, PCTWDWET2001WS, PESTIC1997WS, POPDEN2010WS, PRECIP_MINUS_EVTWS, RCKDEPWS, RDCRSSLPWTDWS, RDCRSWS, RDDENSWS, ROCKNWS, SANDWS, SEPTICWS, STRMPOW_CAT, SUPERFUNDDENSWS, SW_FLUXWS, SWS, TMAX9120WS, TRIDENSWS, WATERINPUTWS, WETINDEXWS, WETTEDWIDTH, WTDEPWS, WWTPALLDENSWS, WWTPMAJORDENSWS, SITE_TYPE:L3Eco)) %>% # 74 vars in total
+   relocate(COMID, .after = cal_val)
 ```
 
 #### Perform final correlation check
@@ -284,7 +312,7 @@ tss_vars_selected <- tss_vars %>%
 ```{r, warning=FALSE}
 # Subset numeric variables only
 tss_vars_num_selected <- tss_vars_selected %>% 
-  select(!c(PCT_EROD:L3Eco)) %>% 
+  select(!c(SITE_TYPE:L3Eco)) %>% 
   select(!c(MLocID:logTSS)) 
 
 # FULL CORRELATION MATRIX
@@ -293,12 +321,14 @@ spear2 <- as.data.frame(spear2)
 spear.rows2 <- tibble::rownames_to_column(spear2)
 
 # CONDENSED CORRELATION MATRIX (>0.8 ONLY)
-matrix2_new <- spear.rows2 %>%  
+matrix2 <- spear.rows2 %>%  
   gather(-rowname, key = "colname", value = "cor") %>% 
   filter(abs(cor) > 0.8)
 
 rm(list=c('spear2', 'spear.rows2'))
 # ***CONTINUE ONCE NO CORRELATED VARIABLES REMAIN***
+
+rm('tss_vars_num_selected')
 ```
 
 # **3 - PREPARE DATA FOR MODELS**
@@ -310,14 +340,7 @@ rm(list=c('spear2', 'spear.rows2'))
 sapply(tss_vars_selected, function(x) sum(is.na(x)))
 
 # PERFORM NA ROUGHFIX FUNCTION ON ALL METRICS WITH AT LEAST 1 NA VALUE (ADD CODE AS NEEDED)
-tss_vars_selected$BANKFULLWIDTH <- na.roughfix(tss_vars_selected$BANKFULLWIDTH) #bankfull width (n = 66 NAs)
-tss_vars_selected$SW_FLUXWS <- na.roughfix(tss_vars_selected$SW_FLUXWS) #surface water flux (n = 2 NAs)
-
-# Subset numeric variables only
-tss_vars_num_selected <- tss_vars_selected %>% 
-  select(!c(PCT_EROD:L3Eco)) %>% 
-  select(!c(MLocID:logTSS)) 
-
+tss_vars_selected$WETTEDWIDTH <- na.roughfix(tss_vars_selected$BANKFULLWIDTH) # 63 NAs
 ```
 
 # **4 - EXPLORE DATA**
@@ -327,93 +350,14 @@ tss_vars_num_selected <- tss_vars_selected %>%
 ```{r}
 # HISTOGRAM
 hist(tss_vars_selected$TSS, main = "", xlab = "TSS") #raw data
-hist(tss_vars_selected$logTSS, main = "", xlab = "log TSS") #log-transformed
+hist(tss_vars_selected$logTSS, main = "", xlab = "logTSS") #log-transformed
 
 # DENSITY PLOT
 hist(tss_vars_selected$logTSS, main="", prob=T, xlab = "TSS")
-d <- density(tss_vars_selected$logTSS) #Estimate probability density and save it into **d**
-lines(d, col='red',lwd=2) #Superimpose the probability density as a curve on the previous probability density histogram
 
 # BOX PLOT & STRIP CHART
 boxplot(tss_vars_selected$logTSS, ylab = "TSS")
 #stripchart(tss_vars_selected$TSS, vertical = T, pch=1, col='red', add = T)
-
-```
-
-## PREDICTOR VARIABLES
-
-```{r}
-# Kernel density plot function
-kd_plots <- function(data, filter_col_name, filter_value) {
-  data %>%
-    filter(.data[[filter_col_name]] == filter_value) %>% # Using .data[[]] for dynamic column names
-    select(BANKFULLWIDTH:L3Eco) %>% 
-    select('WDRW_LDWS', 'PCTCONIF2001WS' , 'CLAYWS' , 'PESTIC1997WS' , 'SANDWS' , 'PCTCROP2001WS' , 'POPDEN2010WS' , 'PRECIP9120WS' , 'PCTAGSLPMID2001WS' , 'PCT_EROD' , 'SW_FLUXWS' , 'PCTIMP2001WS' , 'RDCRSWS' , 'WTDEPWS' , 'ELEVWS' , 'WETINDEXWS' , 'PCTSHRB2001WS' , 'KFFACTWS' , 'PCTICE2001WS' , 'RCKDEPWS') %>% 
-  keep(is.numeric) %>% 
-  gather() %>% 
-  ggplot(aes(value)) +
-  facet_wrap(~ key, scales = "free") +
-  geom_density() +
-  geom_rug() + ggtitle(paste0(filter_value))
-}
-
-# Top 20 variables from RF model broken out by reference status
-kd_plots(data = tss_vars_selected, "ReferenceSite", "REFERENCE")
-kd_plots(data = tss_vars_selected, "ReferenceSite", "MODERATELY DISTURBED")
-kd_plots(data = tss_vars_selected, "ReferenceSite", "MOST DISTURBED")
-
-# Top 20 variables from RF model broken out by L2 Ecoregion
-kd_plots(data = tss_vars_selected, "L2Eco", "Western Cordillera")
-kd_plots(data = tss_vars_selected, "L2Eco", "Cold Deserts")
-kd_plots(data = tss_vars_selected, "L2Eco", "Marine West Coast Forest")
-
-# Top 20 variables from RF model broken out by TSS category (ND, med, high)
-# Non-detects
-tss_vars_selected %>%
-  filter(TSS<=0.25 | TSS<=0.5) %>%  # N = 356
-  select(BANKFULLWIDTH:L3Eco) %>% 
-  select('WDRW_LDWS', 'PCTCONIF2001WS' , 'CLAYWS' , 'PESTIC1997WS' , 'SANDWS' , 'PCTCROP2001WS' , 'POPDEN2010WS' , 'PRECIP9120WS' , 'PCTAGSLPMID2001WS' , 'PCT_EROD' , 'SW_FLUXWS' , 'PCTIMP2001WS' , 'RDCRSWS' , 'WTDEPWS' , 'ELEVWS' , 'WETINDEXWS' , 'PCTSHRB2001WS' , 'KFFACTWS' , 'PCTICE2001WS' , 'RCKDEPWS') %>% 
-  keep(is.numeric) %>% 
-  gather() %>% 
-  ggplot(aes(value)) +
-  facet_wrap(~ key, scales = "free") +
-  geom_density() +
-  geom_rug() + ggtitle("ND")
-
-# >0.5 - 20 mg/L
-tss_vars_selected %>%
-  filter(TSS > 0.5 | TSS <= 20) %>% # N = 717
-  select(BANKFULLWIDTH:L3Eco) %>% 
-  select('WDRW_LDWS', 'PCTCONIF2001WS' , 'CLAYWS' , 'PESTIC1997WS' , 'SANDWS' , 'PCTCROP2001WS' , 'POPDEN2010WS' , 'PRECIP9120WS' , 'PCTAGSLPMID2001WS' , 'PCT_EROD' , 'SW_FLUXWS' , 'PCTIMP2001WS' , 'RDCRSWS' , 'WTDEPWS' , 'ELEVWS' , 'WETINDEXWS' , 'PCTSHRB2001WS' , 'KFFACTWS' , 'PCTICE2001WS' , 'RCKDEPWS') %>% 
-  keep(is.numeric) %>% 
-  gather() %>% 
-  ggplot(aes(value)) +
-  facet_wrap(~ key, scales = "free") +
-  geom_density() +
-  geom_rug() + ggtitle("TSS 1-20 mg/L")
-
-# >20 mg/L
-tss_vars_selected %>%
-  filter(TSS > 20) %>% # N = 35
-  select(BANKFULLWIDTH:L3Eco) %>% 
-  select('WDRW_LDWS', 'PCTCONIF2001WS' , 'CLAYWS' , 'PESTIC1997WS' , 'SANDWS' , 'PCTCROP2001WS' , 'POPDEN2010WS' , 'PRECIP9120WS' , 'PCTAGSLPMID2001WS' , 'PCT_EROD' , 'SW_FLUXWS' , 'PCTIMP2001WS' , 'RDCRSWS' , 'WTDEPWS' , 'ELEVWS' , 'WETINDEXWS' , 'PCTSHRB2001WS' , 'KFFACTWS' , 'PCTICE2001WS' , 'RCKDEPWS') %>% 
-  keep(is.numeric) %>% 
-  gather() %>% 
-  ggplot(aes(value)) +
-  facet_wrap(~ key, scales = "free") +
-  geom_density() +
-  geom_rug() + ggtitle("TSS >20 mg/L")
-
-# All TSS
-tss_vars_selected %>%
-  select(BANKFULLWIDTH:L3Eco) %>% 
-  select('WDRW_LDWS', 'PCTCONIF2001WS' , 'CLAYWS' , 'PESTIC1997WS' , 'SANDWS' , 'PCTCROP2001WS' , 'POPDEN2010WS' , 'PRECIP9120WS' , 'PCTAGSLPMID2001WS' , 'PCT_EROD' , 'SW_FLUXWS' , 'PCTIMP2001WS' , 'RDCRSWS' , 'WTDEPWS' , 'ELEVWS' , 'WETINDEXWS' , 'PCTSHRB2001WS' , 'KFFACTWS' , 'PCTICE2001WS' , 'RCKDEPWS') %>% 
-  keep(is.numeric) %>% 
-  gather() %>% 
-  ggplot(aes(value)) +
-  facet_wrap(~ key, scales = "free") +
-  geom_density() +
-  geom_rug() + ggtitle("All sites")
 
 ```
 
@@ -434,10 +378,11 @@ tss.ref <- tss_vars_selected %>% #subset reference only dataset
   select(-c(MLocID:TSS, COMID))
 
 tss.cal_val <- rbind(tss.cal, tss.val)
-write_xlsx(tss.cal_val, path = paste0("C://Users//sberzin//OneDrive - Oregon//Desktop//TSS-Cal-val_New", Sys.Date(), ".xlsx"))
+
+#write_xlsx(tss.cal_val, path = paste0("~/BioMonORDEQ/Benchmarks/Water Chemistry/TSS v2/TSS_cal_val", Sys.Date(), ".xlsx"))
 ```
 
-## FULL MODEL - ALL PREDICTORS INCLUDED (N = 79)
+## FULL MODEL - ALL PREDICTORS INCLUDED 
 
 #### Tuning the model (finding best mtry)
 
@@ -462,6 +407,8 @@ print(best_mtry)
 # print(rf_random)
 # plot(rf_random)
 
+# Going with mtry = 7.
+
 ```
 
 #### Build full model
@@ -470,10 +417,9 @@ print(best_mtry)
 set.seed(39)
 
 rf.full <- randomForest(logTSS ~ ., tss.cal, importance = TRUE, mtry=7, keep.forest = TRUE, ntree = 500) #run random forest model on all predictors
-print(rf.full)
+#print(rf.full)
 
-varImpPlot(rf.full, type = 1, n.var = 20, main = "All-Sites Model") #variable importance plot
-#varImpPlot(rf.full, type = 2, n.var = 20, main = "Full Model") #variable importance plot
+varImpPlot(rf.full, type = 1, n.var = 25, main = "All-Sites Model") #variable importance plot
 ```
 
 #### Tuning the model (how many trees)
@@ -488,21 +434,21 @@ plot(rf.full, log="x", main = '')  # 500 seems to work fine.
 ```{r}
 # Predictions
 pred.rf <- predict(rf.full, newdata = tss.cal)
-plot(tss.cal$logTSS ~ pred.rf, xlab = 'predicted logTSS', ylab = 'observed logTSS', xlim = c(0,4.5), ylim = c(0,4.5), main = '')
-abline(a=0,b=1)
-text(4,1, "RMSE=6.30 
-%Var=29.94")
 
-# Model error
-#(rmse<-sqrt(sum((pred.rf - tss.cal$logTSS)^2)/length(tss.cal$logTSS))) #untransformed prediction error
-ut_pred.rf <- exp(pred.rf)-1
-ut_tss.cal <- exp(tss.cal$logTSS)-1
-RMSE.ut.rf.full <- sqrt(sum((ut_pred.rf - ut_tss.cal)^2)/length(tss.cal$logTSS))
-print(paste("inverse natural log RMSE =", RMSE.ut.rf.full ))
+# Model error 
+full.rmse<- rmse(exp(pred.rf)-1, exp(tss.cal$logTSS)-1)
 
 range_tss <- max(exp(tss.cal_val$logTSS)-1) - min(exp(tss.cal_val$logTSS)-1)
-RMSE.ut.rf.full_scaled <- RMSE.ut.rf.full/range_tss
-print(paste("scaled untransformed RMSE", RMSE.ut.rf.full_scaled*100, '%'))
+full.rmse_scaled <- full.rmse/range_tss
+
+# Percent variance explained
+rf.full_pct.var <- round(100 * rf.full$rsq[length(rf.full$rsq)], 2)
+
+# Plot
+plot(tss.cal$logTSS ~ pred.rf, xlab = 'predicted logTSS', ylab = 'observed logTSS', main = 'Full model')
+abline(a=0,b=1)
+text(1.5,4, paste0("RMSE = ",round(full.rmse, 2)," | scaled RMSE = ", round(full.rmse_scaled*100,2), "%"))
+text(1,3, paste0("Variance explained = ",rf.full_pct.var,"%"))
 ```
 
 ## REDUCED MODEL - IMPORTANT PREDICTORS ONLY
@@ -512,137 +458,266 @@ print(paste("scaled untransformed RMSE", RMSE.ut.rf.full_scaled*100, '%'))
 ```{r}
 set.seed(32)
 
-rf.red_20 <- randomForest(logTSS ~ WDRW_LDWS + PCTCONIF2001WS + CLAYWS + PESTIC1997WS + SANDWS + PCTCROP2001WS + POPDEN2010WS + PRECIP9120WS + PCTAGSLPMID2001WS + PCT_EROD + SW_FLUXWS + PCTIMP2001WS + RDCRSWS + WTDEPWS + ELEVWS + WETINDEXWS + PCTSHRB2001WS + KFFACTWS + PCTICE2001WS + RCKDEPWS, data = tss.cal, importance = TRUE,  keep.forest = TRUE, mtry=7, ntree = 500) 
+rf.red_20 <- randomForest(logTSS ~ CLAYWS + PRECIP_MINUS_EVTWS + PESTIC1997WS + PCTCONIF2001WS + PCTURBLO2001WS + WATERINPUTWS + PCTAGSLPMID2001WS + SANDWS + SWS + POPDEN2010WS + PCTSHRB2001WS + SW_FLUXWS + RDCRSWS + KFFACTWS + ELEVWS + PCTCROP2001WS + SEPTICWS + ROCKNWS + PCTGLACLAKECRSWS + PCTDECID2001WS, data = tss.cal, importance = TRUE,  keep.forest = TRUE, mtry=7, ntree = 500) 
 
-print(rf.red_20)
+#print(rf.red_20)
 summary(rf.red_20)
 
 varImpPlot(rf.red_20, type = 1, n.var = 20, main = "Reduced Model top 20") #variable importance plot
-#varImpPlot(rf.red_20, type = 2, n.var = 20, main = "Reduced Model top 20") #variable importance plot
 
-# Predictions & model error
+# Predictions
 pred.rf.red_20 <- predict(rf.red_20, newdata = tss.cal)
-plot(tss.cal$logTSS ~ pred.rf.red_20, xlab = 'predicted logTSS', ylab = 'observed logTSS', xlim = c(0,4.5), ylim = c(0,4.5), main = 'red_20')
+
+# Model error 
+red_20.rmse<- rmse(exp(pred.rf.red_20)-1, exp(tss.cal$logTSS)-1)
+red_20.rmse_scaled <- red_20.rmse/range_tss
+
+# Percent variance explained
+rf.red_20_pct.var <- round(100 * rf.red_20$rsq[length(rf.red_20$rsq)], 2)
+
+# Plot
+plot(tss.cal$logTSS ~ pred.rf.red_20, xlab = 'predicted logTSS', ylab = 'observed logTSS', main = 'Reduced Model Top 20')
 abline(a=0,b=1)
-
-# Model error
-#(rmse<-sqrt(sum((pred.rf.red_20 - tss.cal$logTSS)^2)/length(tss.cal$logTSS))) #untransformed prediction error
-ut_pred.rf.red_20 <- exp(pred.rf.red_20)-1
-ut_tss.cal <- exp(tss.cal$logTSS)-1
-RMSE.ut.rf.red_20 <- sqrt(sum((ut_pred.rf.red_20 - ut_tss.cal)^2)/length(tss.cal$logTSS))
-print(paste("inverse natural log RMSE =", RMSE.ut.rf.red_20))
-
-RMSE.ut.rf.red_20_scaled <- RMSE.ut.rf.red_20/range_tss
-print(paste("scaled untransformed RMSE", RMSE.ut.rf.red_20_scaled*100, '%'))
+text(1.5,4, paste0("RMSE = ",round(red_20.rmse, 2)," | scaled RMSE = ", round(red_20.rmse_scaled*100,2), "%"))
+text(1.5,3.3, paste0("Variance explained = ",rf.red_20_pct.var,"%"))
 ```
 
-#### \* Final reduced model N = 15
+#### Reduced model N = 14
 
 ```{r}
 set.seed(32)
 
-rf.red_15 <- randomForest(logTSS ~ WDRW_LDWS + PCTCONIF2001WS + CLAYWS + PESTIC1997WS + SANDWS + PCTCROP2001WS + POPDEN2010WS + PRECIP9120WS + PCTAGSLPMID2001WS + PCT_EROD + SW_FLUXWS + PCTIMP2001WS + RDCRSWS + WTDEPWS + ELEVWS, data = tss.cal, importance = TRUE,  keep.forest = TRUE, mtry=7, ntree = 500) 
+rf.red_14 <- randomForest(logTSS ~ CLAYWS + PRECIP_MINUS_EVTWS + PESTIC1997WS + PCTCONIF2001WS + PCTURBLO2001WS + WATERINPUTWS + PCTAGSLPMID2001WS + SANDWS + SWS + POPDEN2010WS + PCTSHRB2001WS + SW_FLUXWS + RDCRSWS + KFFACTWS, data = tss.cal, importance = TRUE,  keep.forest = TRUE, mtry=14, ntree = 500) 
 
-print(rf.red_15)
+#print(rf.red_14)
+summary(rf.red_14)
 
-varImpPlot(rf.red_15, type = 1, main = "Reduced Model top 15") #variable importance plot
-#varImpPlot(rf.red_15, type = 2, main = "Reduced Model top 15") #variable importance plot
+varImpPlot(rf.red_14, type = 1, n.var = 14, main = "Reduced Model Top 14") #variable importance plot
 
 # Predictions
-pred.rf.red_15 <- predict(rf.red_15, newdata = tss.cal)
-plot(tss.cal$logTSS ~ pred.rf.red_15, xlab = 'predicted logTSS', ylab = 'observed logTSS', xlim = c(0,4.5), ylim = c(0,4.5), main = 'red_15')
+pred.rf.red_14 <- predict(rf.red_14, newdata = tss.cal)
+
+# Model error 
+red_14.rmse<- rmse(exp(pred.rf.red_14)-1, exp(tss.cal$logTSS)-1)
+red_14.rmse_scaled <- red_14.rmse/range_tss
+
+# Percent variance explained
+rf.red_14_pct.var <- round(100 * rf.red_14$rsq[length(rf.red_14$rsq)], 2)
+
+# Plot
+plot(tss.cal$logTSS ~ pred.rf.red_14, xlab = 'predicted logTSS', ylab = 'observed logTSS', main = 'Reduced Model Top 14')
 abline(a=0,b=1)
-
-# Model error
-#(rmse<-sqrt(sum((pred.rf.red_15 - tss.cal$logTSS)^2)/length(tss.cal$logTSS))) #untransformed prediction error
-ut_pred.rf.red_15 <- exp(pred.rf.red_15)-1
-ut_tss.cal <- exp(tss.cal$logTSS)-1
-RMSE.ut.rf.red_15 <- sqrt(sum((ut_pred.rf.red_15 - ut_tss.cal)^2)/length(tss.cal$logTSS))
-print(paste("inverse natural log RMSE =", RMSE.ut.rf.red_15))
-
-RMSE.ut.rf.red_15_scaled <- RMSE.ut.rf.red_15/range_tss
-print(paste("scaled untransformed RMSE", RMSE.ut.rf.red_15_scaled*100, '%'))
-
-#Untransformed plot log scale axes *** FOR REPORT
-plot((exp(tss.cal$logTSS)-1) ~ (exp(pred.rf.red_15)-1), log = "xy",  xlab = 'predicted TSS (mg/L)', ylab = 'observed TSS (mg/L)', main = '', 
-     xlim = (c(0.2,100)), ylim = c(0.2,100))
-abline(a=0,b=1)
-text(50, 0.5, "RMSE = 6.35 
-%Var = 26.58")
-
-#Untransformed plot no log scale axes
-plot((exp(tss.cal$logTSS)-1) ~ (exp(pred.rf.red_15)-1),  xlab = 'predicted TSS (mg/L)', ylab = 'observed TSS (mg/L)', main = 'red_15')
-abline(a=0,b=1)
+text(1.5,4, paste0("RMSE = ",round(red_14.rmse, 2)," | scaled RMSE = ", round(red_14.rmse_scaled*100,2), "%"))
+text(1,3.3, paste0("Variance explained = ",rf.red_14_pct.var,"%"))
 ```
-
-#### Residual plot for red_15 model
+#### Build reduced model with 9 predictors (final reduced model)
 
 ```{r}
-residuals.red_15 <- (exp(tss.cal$logTSS)-1) - (exp(pred.rf.red_15)-1) # Observed minus predicted 
-plot(residuals.red_15 ~ (exp(pred.rf.red_15)-1), xlab = "Predicted TSS (mg/L)", ylab = "Residuals", main="rf.red_15 residuals")
+set.seed(32)
+
+rf.red_9 <- randomForest(logTSS ~ CLAYWS + PRECIP_MINUS_EVTWS + PESTIC1997WS + PCTCONIF2001WS + PCTURBLO2001WS + WATERINPUTWS + PCTAGSLPMID2001WS + SANDWS + SWS , data = tss.cal, importance = TRUE,  keep.forest = TRUE, mtry=9, ntree = 500) 
+
+#print(rf.red_9)
+summary(rf.red_9)
+
+varImpPlot(rf.red_9, type = 1, n.var = 9, main = "Reduced Model Top 9") #variable importance plot
+
+# Predictions
+pred.rf.red_9 <- predict(rf.red_9, newdata = tss.cal)
+
+# Model error 
+red_9.rmse<- rmse(exp(pred.rf.red_9)-1, exp(tss.cal$logTSS)-1)
+red_9.rmse_scaled <- red_9.rmse/range_tss
+
+# Percent variance explained
+rf.red_9_pct.var <- round(100 * rf.red_9$rsq[length(rf.red_9$rsq)], 2)
+
+# Plot
+plot(tss.cal$logTSS ~ pred.rf.red_9, xlab = 'predicted logTSS', ylab = 'observed logTSS', main = 'CAL Reduced Model Top 9')
+abline(a=0,b=1)
+text(1.2,4, paste0("RMSE = ",round(red_9.rmse, 2)," | scaled RMSE = ", round(red_9.rmse_scaled*100,2), "%"))
+text(1.2,3.3, paste0("Variance explained = ",rf.red_9_pct.var,"%"))
+
+#Untransformed plot no log scale axes
+plot(exp(tss.cal$logTSS)-1 ~ exp(pred.rf.red_9)-1, xlab = 'predicted TSS', ylab = 'observed TSS', main = 'CAL Reduced Model Top 9 untransformed')
+abline(a=0,b=1)
+text(15,100, paste0("RMSE = ",round(red_9.rmse, 2)," | scaled RMSE = ", round(red_9.rmse_scaled*100,2), "%"))
+text(10,80, paste0("Variance explained = ",rf.red_9_pct.var,"%"))
+
+#Untransformed plot no log scale axes
+plot(exp(tss.cal$logTSS) ~ exp(pred.rf.red_9), log = 'xy', xlab = 'predicted TSS (μS/cm)', ylab = 'observed TSS (μS/cm)', main = 'CAL Reduced Model Top 9 log scale axes')
+abline(a=0,b=1)
+text(3,50, paste0("RMSE = ",round(red_9.rmse, 2)," | scaled RMSE = ", round(red_9.rmse_scaled*100,2), "%"))
+text(3,35, paste0("Variance explained = ",rf.red_9_pct.var,"%"))
+```
+#### Build reduced model with 6 predictors
+
+```{r}
+set.seed(32)
+
+rf.red_6 <- randomForest(logTSS ~ CLAYWS + PRECIP_MINUS_EVTWS + PESTIC1997WS + PCTCONIF2001WS + PCTURBLO2001WS + WATERINPUTWS, data = tss.cal, importance = TRUE,  keep.forest = TRUE, mtry=6, ntree = 500) 
+
+#print(rf.red_6)
+summary(rf.red_6)
+
+varImpPlot(rf.red_6, type = 1, n.var = 6, main = "Reduced Model Top 6") #variable importance plot
+
+# Predictions
+pred.rf.red_6 <- predict(rf.red_6, newdata = tss.cal)
+
+# Model error 
+red_6.rmse<- rmse(exp(pred.rf.red_6)-1, exp(tss.cal$logTSS)-1)
+red_6.rmse_scaled <- red_6.rmse/range_tss
+
+# Percent variance explained
+rf.red_6_pct.var <- round(100 * rf.red_6$rsq[length(rf.red_6$rsq)], 2)
+
+# Plot
+plot(tss.cal$logTSS ~ pred.rf.red_6, xlab = 'predicted logTSS', ylab = 'observed logTSS', main = 'Reduced Model Top 6')
+abline(a=0,b=1)
+text(1.2,4, paste0("RMSE = ",round(red_6.rmse, 2)," | scaled RMSE = ", round(red_6.rmse_scaled*100,2), "%"))
+text(1.2,3.3, paste0("Variance explained = ",rf.red_6_pct.var,"%"))
+```
+#### Residual plot for red_9 model
+
+```{r}
+residuals.red_9 <- (exp(tss.cal$logTSS)-1) - (exp(pred.rf.red_9)-1) # Observed minus predicted 
+plot(residuals.red_9 ~ (exp(pred.rf.red_9)-1), xlab = "Predicted TSS (mg/L)", ylab = "Residuals", main="rf.red_9 residuals")
 abline(h=0, col = "red", lty = 2)
 ```
 
 #### Test reduced model with VAL data
 
 ```{r}
-# Predictions & model error
-pred.rf.red_15_val <- predict(rf.red_15, newdata = tss.val)
-
-# Model error
-ut_pred.rf.red_15_val <- exp(pred.rf.red_15_val)-1
-ut_tss.val <- exp(tss.val$logTSS)-1
-RMSE.ut.rf.red_15_val <- sqrt(sum((ut_pred.rf.red_15_val - ut_tss.val)^2)/length(tss.val$logTSS))
-print(paste("inverse natural log RMSE =", RMSE.ut.rf.red_15_val))
-
-RMSE.ut.rf.red_15_val_scaled <- RMSE.ut.rf.red_15_val/range_tss
-print(paste("scaled untransformed RMSE", RMSE.ut.rf.red_15_val_scaled*100, '%'))
-
-# Log plot
-plot(tss.val$logTSS ~ pred.rf.red_15_val, xlab = 'predicted logTSS', ylab = 'observed logTSS', xlim = c(0,4.5), ylim = c(0,4.5), main = 'red_15_VAL')
-abline(a=0,b=1)
-
-#Untransformed plot log scale axes *** FOR REPORT
-plot((exp(tss.val$logTSS)-1) ~ (exp(pred.rf.red_15_val)-1), log = "xy",  xlab = 'predicted TSS (mg/L)', ylab = 'observed TSS (mg/L)', main = '',
-  xlim = (c(0.2,100)), ylim = c(0.2,100))
-abline(a=0,b=1)
-text(50, 0.5, "RMSE = 13.68 
-%Var = #")
-
-#Untransformed plot no log scale axes
-plot((exp(tss.val$logTSS)-1) ~ (exp(pred.rf.red_15_val)-1),  xlab = 'predicted TSS (mg/L)', ylab = 'observed TSS (mg/L)', main = 'red_15 VAL')
-abline(a=0,b=1)
-
-residuals.red_15_val <- (exp(tss.val$logTSS)-1) - (exp(pred.rf.red_15_val)-1) # Observed minus predicted 
-```
-
-#### 4 predictors (not using this one)
-
-```{r}
 set.seed(32)
 
-rf.red_4 <- randomForest(logTSS ~ WDRW_LDWS + PCTCONIF2001WS + CLAYWS + PESTIC1997WS, data = tss.cal, importance = TRUE,  keep.forest = TRUE, ntree = 500) 
+rf.red_9_val <- randomForest(logTSS ~ CLAYWS + PRECIP_MINUS_EVTWS + PESTIC1997WS + PCTCONIF2001WS + PCTURBLO2001WS + WATERINPUTWS + PCTAGSLPMID2001WS + SANDWS + SWS , data = tss.val, importance = TRUE,  keep.forest = TRUE, mtry=9, ntree = 500) 
 
-print(rf.red_4)
+#print(rf.red_9_val)
+summary(rf.red_9_val)
 
-varImpPlot(rf.red_4, type = 1, main = "Reduced Model top 4") #variable importance plot
-#varImpPlot(rf.red_4, type = 2, main = "Reduced Model top 4") #variable importance plot
+varImpPlot(rf.red_9_val, type = 1, n.var = 9, main = "Reduced Model Top 9") #variable importance plot
 
-# Predictions & model error
-pred.rf.red_4 <- predict(rf.red_4, newdata = tss.cal)
-plot(tss.cal$logTSS ~ pred.rf.red_4, xlab = 'predicted logTSS', ylab = 'observed logTSS', xlim = c(0,5), ylim = c(0,5), main = 'red_4')
+# Predictions
+pred.rf.red_9_val <- predict(rf.red_9_val, newdata = tss.val)
+
+# Model error 
+red_9.rmse_val<- rmse(exp(pred.rf.red_9_val)-1, exp(tss.val$logTSS)-1)
+red_9.rmse_scaled_val <- red_9.rmse_val/range_tss
+
+# Percent variance explained
+rf.red_9_pct.var_val <- round(100 * rf.red_9$rsq[length(rf.red_9$rsq)], 2)
+
+# Plot
+plot(tss.val$logTSS ~ pred.rf.red_9_val, xlab = 'predicted logTSS', ylab = 'observed logTSS', main = 'VAL Reduced Model Top 9')
+abline(a=0,b=1)
+text(1.2,4, paste0("RMSE = ",round(red_9.rmse_val, 2)," | scaled RMSE = ", round(red_9.rmse_scaled_val*100,2), "%"))
+text(1.2,3.3, paste0("Variance explained = ",rf.red_9_pct.var,"%"))
+
+#Untransformed plot no log scale axes
+plot(exp(tss.val$logTSS)-1 ~ exp(pred.rf.red_9_val)-1, xlab = 'predicted TSS', ylab = 'observed TSS', main = 'VAL Reduced Model Top 9 untransformed')
+abline(a=0,b=1)
+text(15,80, paste0("RMSE = ",round(red_9.rmse_val, 2)," | scaled RMSE = ", round(red_9.rmse_scaled_val*100,2), "%"))
+text(10,70, paste0("Variance explained = ",rf.red_9_pct.var,"%"))
+
+#Untransformed plot no log scale axes
+plot(exp(tss.val$logTSS) ~ exp(pred.rf.red_9_val), log = 'xy', xlab = 'predicted TSS (μS/cm)', ylab = 'observed TSS (μS/cm)', main = 'VAL Reduced Model Top 9 log scale axes')
+abline(a=0,b=1)
+text(3,50, paste0("RMSE = ",round(red_9.rmse_val, 2)," | scaled RMSE = ", round(red_9.rmse_scaled_val*100,2), "%"))
+text(3,35, paste0("Variance explained = ",rf.red_9_pct.var_val,"%"))
+```
+#### Plot Obs vs pred CAL and VAL all sites
+ 
+ SYB 1/23 I think something is wrong with this plot, need to fix.
+
+```{r}
+# plot obs vs. predicted CAL 
+par(mfrow=c(1,2))
+par(mar=c(4.3,5,1,1))
+plot(x = exp(pred.rf.red_9) -1, y = exp(tss.cal$logTSS) -1,
+	  xlab='Predicted TSS', ylab='Observed TSS', main='red_9 CAL', lwd=1.5, 
+	  cex.lab=1.5, las = 1, font = 2)
+abline(a=0, b=1, col='blue', lty=2) 
+
+# plot obs vs. predicted VAL
+par(new=TRUE)
+plot(x = exp(pred.rf.red_9_val) -1 , y = exp(tss.val$logTSS) -1,
+	  xlab='', ylab='', main='', pch=2, col='red', cex=1.3, lwd=1.5,axes=FALSE) 
+ 
+# plot residuals CAL
+par(mar=c(4.3,4.3,1,1))
+plot(x = (exp(pred.rf.red_9)-1), y = exp((tss.cal$logTSS) -1) -(exp(pred.rf.red_9) -1),
+	  xlab='Predicted TSS', ylab='Residuals (obs-pred)', main='red_9 VAL', 
+	  lwd=1.5,cex.lab=1.5, las = 1, font = 2)
+abline(h=0, col="blue", lty = 2)
+ 
+# plot residuals VAL
+par(new=TRUE)	
+plot(x = (exp(pred.rf.red_9_val) -1), y = exp(tss.val$logTSS) -1 -exp(pred.rf.red_9_val) -1,
+	  xlab='', ylab="", main="", 
+	  pch=2, col='red', 
+	  lwd=1.5,cex.lab=1.5, las = 1, font = 2, cex=1.3,
+	  axes=FALSE)
+```
+
+Predictions on CAL + VAL
+```{r}
+# Predictions
+pred.rf.red_9_cal_val <- predict(rf.red_9, newdata = tss.cal_val)
+
+# Plot
+plot(tss.cal_val$logTSS ~ pred.rf.red_9_cal_val, xlab = 'predicted logTSS', ylab = 'observed logTSS', main = 'CAL & VAL Reduced Model Top 9')
 abline(a=0,b=1)
 
-# Model error
-#(rmse<-sqrt(sum((pred.rf.red_4 - tss.cal$logTSS)^2)/length(tss.cal$logTSS))) #untransformed prediction error
-ut_pred.rf.red_4 <- exp(pred.rf.red_4)-1
-ut_tss.cal <- exp(tss.cal$logTSS)-1
-RMSE.ut.rf.red_4 <- sqrt(sum((ut_pred.rf.red_4 - ut_tss.cal)^2)/length(tss.cal$logTSS))
-print(paste("inverse natural log RMSE =", RMSE.ut.rf.red_4))
+#Untransformed plot no log scale axes
+plot(exp(tss.cal_val$logTSS) -1 ~ exp(pred.rf.red_9_cal_val)-1, xlab = 'predicted TSS', ylab = 'observed TSS', main = 'CAL & VAL Reduced Model Top 9')
+abline(a=0,b=1)
 
-RMSE.ut.rf.red_4_scaled <- RMSE.ut.rf.red_4/range_tss
-print(paste("scaled untransformed RMSE", RMSE.ut.rf.red_4_scaled*100, '%'))
+#Untransformed plot no log scale axes
+plot(exp(tss.cal_val$logTSS) -1 ~ exp(pred.rf.red_9_cal_val) - 1, log = 'xy', xlab = 'predicted TSS', ylab = 'observed TSS', main = 'CAL & VAL Reduced Model Top 9 log scale axes')
+abline(a=0,b=1)
+
+# CALCULATE PROPORTIONS ABOVE 1:1 AND 2:1 LINES
+oe <- cbind(pred.rf.red_9_cal_val, tss.cal_val$logTSS)
+oe <- as.data.frame(oe) %>% 
+  rename(pred_logTSS = V2) %>% 
+  mutate(obs_TSS = exp(tss.cal_val$logTSS)) %>% 
+  mutate(pred_TSS = exp(pred.rf.red_9_cal_val)-1) %>% 
+  mutate('O/E' = obs_TSS/pred_TSS)
+
+print(sum(oe$`O/E`>1)/nrow(tss.cal_val)) # prop above 1:1 line
+print(sum(oe$`O/E`>2)/nrow(tss.cal_val)) # prop above 2:1 line
 ```
+
+
+
+
+
+
+
+
+
+
+
+
+
+Monday start here!  SYB
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ## ADJUST HUMAN-INFLUENCED PREDICTORS TO REFERENCE LEVELS
 
@@ -1092,4 +1167,93 @@ plot(x = (exp(pred.rf.red_15_val)-1), y = residuals.red_15_val,
 	  pch=2, col='red', 
 	  lwd=1.5,cex.lab=1.5, las = 1, font = 2, cex=1.3,
 	  axes=FALSE)
+```
+
+
+## PREDICTOR VARIABLES
+
+```{r}
+# Kernel density plot function
+kd_plots <- function(data, filter_col_name, filter_value) {
+  data %>%
+    filter(.data[[filter_col_name]] == filter_value) %>% # Using .data[[]] for dynamic column names
+    select(BANKFULLWIDTH:L3Eco) %>% 
+    select("AGKFFACTWS",
+ 
+"WDRW_LDWS",
+"WATERINPUTWS",
+"CBNFWS",
+"MANUREWS",
+"FERTWS") %>% 
+  keep(is.numeric) %>% 
+  gather() %>% 
+  ggplot(aes(value)) +
+  facet_wrap(~ key, scales = "free") +
+  geom_density() +
+  geom_rug() + ggtitle(paste0(filter_value))
+}
+
+# Top 20 variables from RF model broken out by reference status
+kd_plots(data = tss_vars_selected, "ReferenceSite", "REFERENCE")
+kd_plots(data = tss_vars_selected, "ReferenceSite", "MODERATELY DISTURBED")
+kd_plots(data = tss_vars_selected, "ReferenceSite", "MOST DISTURBED")
+
+# Top 20 variables from RF model broken out by L2 Ecoregion
+kd_plots(data = tss_vars_selected, "L2Eco", "Western Cordillera")
+kd_plots(data = tss_vars_selected, "L2Eco", "Cold Deserts")
+kd_plots(data = tss_vars_selected, "L2Eco", "Marine West Coast Forest")
+
+# Top 20 variables from RF model broken out by TSS category (ND, med, high)
+# Non-detects
+tss_vars_selected %>%
+  filter(TSS<=0.25 | TSS<=0.5) %>%  # N = 356
+  select(BANKFULLWIDTH:L3Eco) %>% 
+  select('WDRW_LDWS', 'PCTCONIF2001WS' , 'CLAYWS' , 'PESTIC1997WS' , 'SANDWS' , 'PCTCROP2001WS' , 'POPDEN2010WS' , 'PRECIP9120WS' , 'PCTAGSLPMID2001WS' , 'PCT_EROD' , 'SW_FLUXWS' , 'PCTIMP2001WS' , 'RDCRSWS' , 'WTDEPWS' , 'ELEVWS' , 'WETINDEXWS' , 'PCTSHRB2001WS' , 'KFFACTWS' , 'PCTICE2001WS' , 'RCKDEPWS') %>% 
+  keep(is.numeric) %>% 
+  gather() %>% 
+  ggplot(aes(value)) +
+  facet_wrap(~ key, scales = "free") +
+  geom_density() +
+  geom_rug() + ggtitle("ND")
+
+# >0.5 - 20 mg/L
+tss_vars_selected %>%
+  filter(TSS > 0.5 | TSS <= 20) %>% # N = 717
+  select(BANKFULLWIDTH:L3Eco) %>% 
+  select('WDRW_LDWS', 'PCTCONIF2001WS' , 'CLAYWS' , 'PESTIC1997WS' , 'SANDWS' , 'PCTCROP2001WS' , 'POPDEN2010WS' , 'PRECIP9120WS' , 'PCTAGSLPMID2001WS' , 'PCT_EROD' , 'SW_FLUXWS' , 'PCTIMP2001WS' , 'RDCRSWS' , 'WTDEPWS' , 'ELEVWS' , 'WETINDEXWS' , 'PCTSHRB2001WS' , 'KFFACTWS' , 'PCTICE2001WS' , 'RCKDEPWS') %>% 
+  keep(is.numeric) %>% 
+  gather() %>% 
+  ggplot(aes(value)) +
+  facet_wrap(~ key, scales = "free") +
+  geom_density() +
+  geom_rug() + ggtitle("TSS 1-20 mg/L")
+
+# >20 mg/L
+tss_vars_selected %>%
+  filter(TSS > 20) %>% # N = 35
+  select(BANKFULLWIDTH:L3Eco) %>% 
+  select('WDRW_LDWS', 'PCTCONIF2001WS' , 'CLAYWS' , 'PESTIC1997WS' , 'SANDWS' , 'PCTCROP2001WS' , 'POPDEN2010WS' , 'PRECIP9120WS' , 'PCTAGSLPMID2001WS' , 'PCT_EROD' , 'SW_FLUXWS' , 'PCTIMP2001WS' , 'RDCRSWS' , 'WTDEPWS' , 'ELEVWS' , 'WETINDEXWS' , 'PCTSHRB2001WS' , 'KFFACTWS' , 'PCTICE2001WS' , 'RCKDEPWS') %>% 
+  keep(is.numeric) %>% 
+  gather() %>% 
+  ggplot(aes(value)) +
+  facet_wrap(~ key, scales = "free") +
+  geom_density() +
+  geom_rug() + ggtitle("TSS >20 mg/L")
+
+# All TSS
+tss_vars %>%
+  select( 
+"PRECIP_MINUS_EVTWS",
+"PRECIP8110WS",
+"PRECIP2008WS",
+"PRECIP9120WS",
+"RUNOFFWS"
+ ) %>% 
+  keep(is.numeric) %>% 
+  gather() %>% 
+  ggplot(aes(value)) +
+  facet_wrap(~ key, scales = "free") +
+  geom_density() +
+  geom_rug() 
+
 ```
